[project]
name = "pulid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.34.2",
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "facexlib>=0.3.0",
    "ftfy>=6.2.3",
    "gradio>=4.44.0",
    "httpx>=0.27.2",
    "insightface>=0.7.3",
    "onnxruntime>=1.19.2",
    "onnxruntime-gpu>=1.19.2",
    "opencv-python>=4.10.0.84",
    "sentencepiece>=0.2.0",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
    "xformers>=0.0.28.post1",
    "apex>=0.9.10.dev0",
    "optimum[graphcore]>=1.17.1",
    "optimum-quanto>=0.2.4",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
]
